--- a/index.html
+++ b/index.html
@@ -418,6 +418,10 @@
 
         /* Media Queries for Responsiveness */
         @media (max-width: 768px) {
+
+            section{
+                margin-top: 40px;
+            }
             .hero-content h1 {
                 font-size: 40px;
             }
@@ -588,7 +592,7 @@
             </div>
         </section>
     
-        <div class="careers-section">
+        <section class="careers-section">
             <div class="careers-container">
                 <div class="careers-left">
                     <h2>TAKE THE NEXT STEP</h2>
@@ -607,10 +611,10 @@
                     <button class="careers-button">APPLY NOW</button>
                 </div>
             </div>
-        </div>
+        </section>
     
         <!-- Services Section -->
-        <div class="services-section">
+        <section class="services-section">
             <div class="services-inside">
                 <div class="services-container">
                     <h2>OUR SERVICES</h2>
@@ -649,7 +653,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <section class="footer custom-footer">
             <div class="container footer-container">
                 <div class="logo-footer">
