--- a/index.html
+++ b/index.html
@@ -419,9 +419,7 @@
         /* Media Queries for Responsiveness */
         @media (max-width: 768px) {
 
-            section{
-                margin-top: 40px;
-            }
+            
             .hero-content h1 {
                 font-size: 40px;
             }
@@ -433,10 +431,6 @@
             .hero-button {
                 font-size: 16px;
                 padding: 10px 20px;
-            }
-
-            .about-section {
-                margin: 20px;
             }
 
             .about-container {
@@ -493,27 +487,27 @@
 
             .careers-container {
                 flex-direction: column;
-                /* Stack divs on top of each other */
                 align-items: center;
-                /* Center align items */
             }
 
             .careers-left,
             .careers-right {
                 width: 100%;
-                /* Full width for stacked items */
                 padding: 10px;
-                /* Adjust padding for mobile */
             }
 
             .careers-left h2,
             .careers-right h1 {
                 text-align: center;
-                /* Center headings for mobile */
             }
 
             .apply-button {
                 margin-top: 20px;
+            }
+
+            section{
+                margin-top: 60px;
+                padding: 10px;
             }
 
         }
